--- a/build.gradle
+++ b/build.gradle
@@ -1,45 +1,55 @@
 plugins {
-    id 'org.springframework.boot' version '2.4.0'
-    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
+    id 'org.springframework.boot' version '2.7.5'
+    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
     id 'java'
     id 'war'
 }
 
 group = 'com.example'
 version = '1.0.0'
-sourceCompatibility = '1.8'
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(17)
+    }
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+    // Spring Boot starters
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'mysql:mysql-connector-java'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    implementation 'javax.validation:validation-api:2.0.1.Final'
-    implementation 'org.hibernate:hibernate-validator:6.0.10.Final'
 
-    // Security
-    implementation 'org.springframework.security:spring-security-web:5.4.2'
-    implementation 'org.springframework.security:spring-security-config:5.4.2'
-    implementation 'org.springframework.security:spring-security-taglibs:5.4.2'
-    implementation 'org.springframework.security:spring-security-core:5.6.10'
+    // Validation
+    implementation 'javax.validation:validation-api:2.0.1.Final'
+    implementation 'org.hibernate.validator:hibernate-validator:6.2.5.Final'
+
+    // Spring Security
+    implementation 'org.springframework.security:spring-security-web:5.7.8'
+    implementation 'org.springframework.security:spring-security-config:5.7.8'
+    implementation 'org.springframework.security:spring-security-taglibs:5.7.8'
+    implementation 'org.springframework.security:spring-security-core:5.7.8'
 
     // JWT
-    implementation 'io.jsonwebtoken:jjwt:0.9.0'
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
 
     // Lombok
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok:1.18.8'
+    compileOnly 'org.projectlombok:lombok:1.18.30'
+    annotationProcessor 'org.projectlombok:lombok:1.18.30'
 
-    // Tomcat external (WAR)
+    // WAR packaging (external Tomcat)
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 }
 
 bootWar {
-    archiveFileName = "quy_tin_dung.war"  // tên WAR xuất ra
+    archiveFileName = "quy_tin_dung.war"
 }
