--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,15 @@ spring.jpa.properties.hibernate.id.new_generator_mappings = true
 spring.jpa.properties.hibernate.show.sql = true
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.generate-ddl=true
-spring.jpa.properties.hibernate.hb2dll.auto = update
+spring.jpa.properties.hibernate.hb2dll.auto = create-drop
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+server.port=8443
+#server.ssl.key-store=classpath:keystore.p12
+#server.ssl.key-store-password=010884
+#server.ssl.key-store-type=PKCS12
+#server.ssl.key-alias=tomcat
+
 #server.servlet.context-path=/quy_tin_dung
 
 
