--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,18 +8,26 @@ spring.jpa.properties.hibernate.id.new_generator_mappings = true
 spring.jpa.properties.hibernate.show.sql = true
 spring.jpa.properties.hibernate.format_sql = true
 spring.jpa.generate-ddl=true
-spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.properties.hibernate.hb2dll.auto = create-drop
+spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 server.port=8443
 #contract.files.dir=/opt/quy_tin_dung_files/generated-contracts/
+#contract.uploads.dir=/opt/quy_tin_dung_files/uploads
+#contract.temp.dir=/opt/quy_tin_dung_files/temp
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=100MB
+logging.level.org.hibernate.cfg=DEBUG
+logging.level.org.hibernate.boot=DEBUG
+#H?P ??NG TÍN D?NG
+contract.files.dir=generated-contracts
+contract.uploads.dir=uploads
+contract.temp.dir=temp
+
 #server.ssl.key-store=classpath:keystore.p12
 #server.ssl.key-store-password=010884
 #server.ssl.key-store-type=PKCS12
 #server.ssl.key-alias=tomcat
-contract.files.dir=generated-contracts
-contract.uploads.dir=uploads
 
 #server.servlet.context-path=/quy_tin_dung
 
