complete hdtc kieu moi

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,17 +12,17 @@ spring.jpa.hibernate.ddl-auto=update
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 server.port=8443
-#contract.files.dir=/opt/quy_tin_dung_files/generated-contracts/
-#contract.uploads.dir=/opt/quy_tin_dung_files/uploads
-#contract.temp.dir=/opt/quy_tin_dung_files/temp
+contract.files.dir=/opt/quy_tin_dung_files/generated-contracts/
+contract.uploads.dir=/opt/quy_tin_dung_files/uploads
+contract.temp.dir=/opt/quy_tin_dung_files/temp
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=100MB
 logging.level.org.hibernate.cfg=DEBUG
 logging.level.org.hibernate.boot=DEBUG
 #H?P ??NG TÍN D?NG
-contract.files.dir=generated-contracts
-contract.uploads.dir=uploads
-contract.temp.dir=temp
+#contract.files.dir=generated-contracts
+#contract.uploads.dir=uploads
+#contract.temp.dir=temp
 
 #server.ssl.key-store=classpath:keystore.p12
 #server.ssl.key-store-password=010884
